# minsuk

./: computer-system-team-08.yaml
Backend/: Dockerfile  main.py
Backend/llm/: chat.py  store.py
Backend/prompts/: anime_characterize_image.txt  characterize_image.txt  content.txt  youtube_topic_recommendations.txt
Backend/routers/: __init__.py  health.py  home.py
Backend/routers/functions/: __init__.py  acrostic_generator.py  anime_characterize.py  characterize.py  interview_simulator.py  kospi_analyzer.py  youtube_topic_recommendations.py
Backend/routers/functions/llm/: store.py
Backend/routers/functions/llm/models/: interview_simulator.py  youtube_topic_recommendations.py
Dockerfile/: Dockerfile  README.md  main.py  pyproject.toml
Dockerfile/Backend/: .dockerignore  main.py  pyproject.toml
Dockerfile/Frontend/: Dockerfile  main.py  pyproject.toml
Frontend/: 0_Home.py  Dockerfile
Frontend/functions/: characterize.py  youtube_topic_recommendations.py
Frontend/locales/en-US/: youtube_topic_recommendations.yaml
Frontend/pages/: __init__.py  interview_simulator.py  youtube.py  youtube_topic_recommendations.py
Frontend/pages/utils/: init.py  page.py  settings.py
Frontend/utils/: client.py  settings.py
Models/: acrostic_generator.py  characterize.py  interview_simulator.py  kospi_analyzer.py  llm.py
k8s/: backend.yaml  frontend.yaml  huggingface-tgi.yaml
